WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197801
A service worker instance should be terminated when its SWServer is destroyed
https://bugs.webkit.org/show_bug.cgi?id=197801
Summary
A service worker instance should be terminated when its SWServer is destroyed
youenn fablet
Reported
2019-05-10 15:07:10 PDT
A service worker instance should be terminated when its SWServer is destroyed
Attachments
Patch
(3.23 KB, patch)
2019-05-10 15:33 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-05-10 15:30:21 PDT
<
rdar://problem/50587270
>
youenn fablet
Comment 2
2019-05-10 15:33:34 PDT
Created
attachment 369608
[details]
Patch
WebKit Commit Bot
Comment 3
2019-05-10 16:33:44 PDT
Comment on
attachment 369608
[details]
Patch Clearing flags on attachment: 369608 Committed
r245200
: <
https://trac.webkit.org/changeset/245200
>
WebKit Commit Bot
Comment 4
2019-05-10 16:33:45 PDT
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 5
2019-05-13 14:32:09 PDT
What mechanism prevents two concurrent but independent sessions from sharing a service worker?
Chris Dumez
Comment 6
2019-05-13 15:08:04 PDT
(In reply to Geoffrey Garen from
comment #5
)
> What mechanism prevents two concurrent but independent sessions from sharing > a service worker?
We use a different SWServer instance per session ID. Service worker instances are owned by each SWServer instance so I do not believe different session can share service workers.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug