A service worker instance should be terminated when its SWServer is destroyed https://bugs.webkit.org/show_bug.cgi?id=197801 <rdar://problem/50587270>

Reviewed by Chris Dumez.

Source/WebCore:

On session destruction, the SWServer is destroyed.
At that time, it should terminate all its running service workers.
Covered by updated API test.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::~SWServer):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:


Canonical link: https://commits.webkit.org/211938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245200 268f45cc-cd09-0410-ab3c-d52691b4dbfc